--- a/API.AutoBuyer/API.AutoBuyer/AutoBuyer.API.csproj
+++ b/API.AutoBuyer/API.AutoBuyer/AutoBuyer.API.csproj
@@ -16,4 +16,8 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\API.Core\AutoBuyer.API.Core.csproj" />
+  </ItemGroup>
+
 </Project>
