--- a/API.AutoBuyer/AutoBuyer.API.Tests/AutoBuyer.API.Tests.csproj
+++ b/API.AutoBuyer/AutoBuyer.API.Tests/AutoBuyer.API.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\API.AutoBuyer\AutoBuyer.API.csproj" />
     <ProjectReference Include="..\API.Core\AutoBuyer.API.Core.csproj" />
   </ItemGroup>
 
