--- a/API.AutoBuyer/API.Core/AutoBuyer.API.Core.csproj
+++ b/API.AutoBuyer/API.Core/AutoBuyer.API.Core.csproj
@@ -1,11 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Npgsql" Version="4.1.3.1" />
+    <PackageReference Include="Npgsql" Version="6.0.4" />
   </ItemGroup>
 
 </Project>
